Update advocate util file and tests cases