@@ -9,16 +9,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.pucar.dristi.config.Configuration;
-import org.pucar.dristi.web.models.Advocate;
-import org.pucar.dristi.web.models.AdvocateResponse;
-import org.pucar.dristi.web.models.AdvocateSearchCriteria;
-import org.pucar.dristi.web.models.AdvocateSearchRequest;
+import org.pucar.dristi.web.models.*;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -56,25 +50,24 @@ public class AdvocateUtilTest {
 
         AdvocateSearchRequest advocateSearchRequest = new AdvocateSearchRequest();
         advocateSearchRequest.setRequestInfo(requestInfo);
-        advocateSearchRequest.setStatus(List.of("INWORKFLOW"));
-
         AdvocateSearchCriteria criteria = new AdvocateSearchCriteria();
         criteria.setId(advocateId);
+        criteria.setResponseList(List.of(Advocate.builder().id(UUID.randomUUID()).applicationNumber("appNumber").isActive(true).build()));
         advocateSearchRequest.setCriteria(List.of(criteria));
 
         Map<String, Object> response = new HashMap<>();
         when(restTemplate.postForObject(anyString(), any(AdvocateSearchRequest.class), eq(Map.class)))
                 .thenReturn(response);
 
-        AdvocateResponse advocateResponse = new AdvocateResponse();
-        advocateResponse.setAdvocates(List.of(new Advocate()));
-        when(mapper.convertValue(any(), eq(AdvocateResponse.class))).thenReturn(advocateResponse);
+        AdvocateListResponse advocateResponse = new AdvocateListResponse();
+        advocateResponse.setAdvocates(List.of(criteria));
+        when(mapper.convertValue(any(), eq(AdvocateListResponse.class))).thenReturn(advocateResponse);
 
         Boolean result = advocateUtil.fetchAdvocateDetails(requestInfo, advocateId);
 
         assertTrue(result);
         verify(restTemplate, times(1)).postForObject(anyString(), any(AdvocateSearchRequest.class), eq(Map.class));
-        verify(mapper, times(1)).convertValue(any(), eq(AdvocateResponse.class));
+        verify(mapper, times(1)).convertValue(any(), eq(AdvocateListResponse.class));
     }
 
     @Test
@@ -92,19 +85,25 @@ public class AdvocateUtilTest {
     public void testFetchAdvocateDetailsEmptyResponse() {
         RequestInfo requestInfo = new RequestInfo();
         String advocateId = "advocateId";
+        AdvocateSearchRequest advocateSearchRequest = new AdvocateSearchRequest();
+        advocateSearchRequest.setRequestInfo(requestInfo);
+        AdvocateSearchCriteria criteria = new AdvocateSearchCriteria();
+        criteria.setId(advocateId);
+        criteria.setResponseList(new ArrayList<>());
+        advocateSearchRequest.setCriteria(List.of(criteria));
 
         Map<String, Object> response = new HashMap<>();
         when(restTemplate.postForObject(anyString(), any(AdvocateSearchRequest.class), eq(Map.class)))
                 .thenReturn(response);
 
-        AdvocateResponse advocateResponse = new AdvocateResponse();
-        advocateResponse.setAdvocates(Collections.emptyList());
-        when(mapper.convertValue(any(), eq(AdvocateResponse.class))).thenReturn(advocateResponse);
+        AdvocateListResponse advocateResponse = new AdvocateListResponse();
+        advocateResponse.setAdvocates(List.of(criteria));
+        when(mapper.convertValue(any(), eq(AdvocateListResponse.class))).thenReturn(advocateResponse);
 
         Boolean result = advocateUtil.fetchAdvocateDetails(requestInfo, advocateId);
 
         assertFalse(result);
         verify(restTemplate, times(1)).postForObject(anyString(), any(AdvocateSearchRequest.class), eq(Map.class));
-        verify(mapper, times(1)).convertValue(any(), eq(AdvocateResponse.class));
+        verify(mapper, times(1)).convertValue(any(), eq(AdvocateListResponse.class));
     }
 }
